# ProxSnap

./: README.md
.github/: 10-pipeline-build-deb-package.yml
.github/workflows/: 10-pipeline-build-deb-package.yml
config/: proxsnap.yaml
debian/: changelog  control  install
proxsnap/: Cargo.toml
proxsnap/src/: cli.rs  client.rs  config.rs  config_file.rs  helper.rs  main.rs  models.rs
proxsnap/src/api/: lxc.rs  mod.rs  nodes.rs  qemu.rs
