[package]
name = "proxsnap"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
clap = { version = "4.5", features = ["derive"] }